# oxidized-skills

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.full  LICENSE  README.md  SECURITY.md  SKILL.md  action.yml  justfile  oxidized-agentic-audit.toml.example  oxidized-skills.toml.example
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agents/: agent.md
src/: audit.rs  cli.rs  config.rs  finding.rs  lib.rs  main.rs  scan.rs
src/output/: json.rs  mod.rs  pretty.rs  sarif.rs
src/scanners/: agent_frontmatter.rs  bash_patterns.rs  frontmatter.rs  mod.rs  package_install.rs  prompt.rs  secrets.rs  semgrep.rs  shellcheck.rs  typescript.rs
tests/: integration.rs  test_agent_frontmatter.rs  test_bash_patterns.rs  test_finding.rs  test_frontmatter.rs  test_output.rs  test_package_install.rs  test_prompt.rs  test_secrets.rs  test_semgrep.rs  test_shellcheck.rs  test_typescript.rs
tests/fixtures/clean-skill/: SKILL.md
tests/fixtures/clean-skill/scripts/: clean.sh
tests/fixtures/clean-ts-skill/: SKILL.md
tests/fixtures/dirty-skill/: SKILL.md
tests/fixtures/dirty-ts-skill/: SKILL.md
tests/fixtures/name-mismatch-skill/: SKILL.md
tests/fixtures/secrets-skill/: SKILL.md
tests/fixtures/shellcheck-skill/: SKILL.md
tests/fixtures/suppressed-agent/: .oxidized-agentic-audit-ignore
tests/fixtures/suppressed-skill/: .oxidized-agentic-audit-ignore  SKILL.md
(+7 files in other folders)
