[package]
name = "oxidized-skills"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Security auditing for AI agent skills"
license = "MIT"
repository = "https://github.com/jbovet/oxidized-skills"
readme = "README.md"

[[bin]]
name = "oxidized-skills"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "2"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
serde-sarif = "0.6"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
