[package]
name = "oxidized-skills"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Security auditing for AI agent skills"
license = "MIT"
repository = "https://github.com/jbovet/oxidized-skills"
readme = "README.md"
keywords = ["security", "audit", "cli", "llm", "skills"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "oxidized-skills"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
colored = "3.1.1"
rayon = "1.11.0"
chrono = { version = "0.4.44", features = ["serde"] }
walkdir = "2.5.0"
serde-sarif = "0.8.0"
tempfile = "3.26.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
